# classmethod_decorator

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/classmethod_decorator/: decorator.py
tests/: test_decorator.py
