[tool.mypy]
python_version = "3.12"
strict = true

# Additional settings for enhanced strictness
warn_unused_configs = true
warn_unreachable = true
enable_error_code = ["ignore-without-code"]
warn_unused_ignores = true
show_error_codes = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.poetry]
name = "classmethod-decorator"
version = "0.1.0"
description = ""
authors = ["Vadim Pushtaev <pushtaev.vm@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
